pihole-exp/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-route
  namespace: pihole-exp
spec:
  parentRefs:
    - name: pihole-gateway
      sectionName: http
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - pihole.raft.lutris.house
  rules:
    - backendRefs:
        - name: pihole-web
          port: 80
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
